2025-04-09  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.4-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.4-alpha01: Severence';git push
	git tag -a 5.3.4-alpha01 -m 'Functionally identical to 5.3.3 except ENABLE_LOGGING, !mnt_chk';git push --tags

	* ncrcat: Do not perform monotonicity checks on bounds variables (they are never monotonic)

2025-03-29  Charlie Zender  <zender@uci.edu>

	* all: Implement ENABLE_LOGGING in configure.ac

2025-03-28  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.3 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.3: Sea Shanty';git push
	git tag -a 5.3.3 -m 'all: qnt ngt zro NaN; ncks: --fpe, ngl rsn chk map, s1d frc_column frc_landunit attribute fix; ncclimo: rgn_stt uses --lst_hrz; ncremap: fix prs->hyb w/fat tpl; ncrename: WARN crd/dmn netCDF4';git push --tags

	* Acceptance tests pass again on Perlmutter after switching from private to Conda-Forge UDUnits

	* Document ncra -Y --prg_nm --pseudonym

2025-03-27  Charlie Zender  <zender@uci.edu>

	* Add nCells, Time to allowed horizontal dimensions in ncks --lst_hrz

	* ncks --lst_hrz seems to work in ncclimo

	* Add stubs for ncks --lst_hrz, nco_xtr_hrz_lst() customized for ncap2 splitter

2025-03-21  Charlie Zender  <zender@uci.edu>

	* Simplify Perlmutter build to be nearly identical to Chrysalis, Andes

	* Document --fpe, add to man and usage pages

	* NCO 5.3.3-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.3-alpha03: Equalizer';git push
	git tag -a 5.3.3-alpha03 -m 'all: perlmutter bld; ncks: ngl rsn chk map, s1d frc_column frc_landunit attribute fix';git push --tags

2025-03-19  Charlie Zender  <zender@uci.edu>

	* Fix Perlmutter environment to avoid /usr/bin/install and use Conda coreutils install to install in ${DATA}/[bin,lib]

2025-02-27  Charlie Zender  <zender@uci.edu>

	* Tidy nco_ply_lst.c

2025-02-21  Charlie Zender  <zender@uci.edu>

	* nco_s1d.c: Move location where frc_column, frc_landunit attributes written
