@@ -128,12 +128,12 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 5.3.4-alpha01
-@set doc-edition 5.3.4-alpha01
+@set nco-edition 5.3.4-alpha02
+@set doc-edition 5.3.4-alpha02
 @set copyright-years 1995--2025
 @set update-year 2025
-@set update-date 29 March 2025
-@set update-month March 2025
+@set update-date 9 Apr 2025
+@set update-month Apr 2025
 
 @settitle @acronym{NCO} @value{nco-edition} User Guide
 
