@@ -1,8 +1,12 @@
 2025-04-09  Charlie Zender  <zender@uci.edu>
 
+	* NCO 5.3.4-alpha02 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.3.4-alpha02: Hypr Paddle';git push
+	git tag -a 5.3.4-alpha02 -m '';git push --tags
+
 	* NCO 5.3.4-alpha01 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.4-alpha01: Severence';git push
-	git tag -a 5.3.4-alpha01 -m 'Functionally identical to 5.3.3 except ENABLE_LOGGING, !mnt_chk';git push --tags
+	git tag -a 5.3.4-alpha01 -m 'Functionally identical to 5.3.3 except ENABLE_LOGGING, !mnt_chk bnd';git push --tags
 
 	* ncrcat: Do not perform monotonicity checks on bounds variables (they are never monotonic)
 
